--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/thisudoriguy/suregbot/issues"
   },
-  "homepage": "https://github.com/thisudoriguy/suregbot#readme"
+  "homepage": "https://github.com/thisudoriguy/suregbot#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
+    "minimist": "^1.2.0",
+    "ora": "^3.0.0"
+  }
 }
